--- a/homework4/index.html
+++ b/homework4/index.html
@@ -14,7 +14,7 @@
      <li class="con"> Наши контакты: </li>
      <li class="tel"> +9-098-765-4321 </li>
      <li class="tel2"> +9-0123-456-890</li>
-     <li class="info"> info@asia-holidays.com </li>
+     <li class="asia"> info@asia-holidays.com </li>
     </ul>
      <ul class="flag">
      <li> <img class="flag" src="img/india.png" alt="India"> </li>
