--- a/homework4/index.html
+++ b/homework4/index.html
@@ -16,55 +16,45 @@
      <li class="tel2"> +9-0123-456-890</li>
      <li class="asia"> info@asia-holidays.com </li>
     </ul>
-     <ul class="flag">
-     <li> <img class="flag" src="img/india.png" alt="India"> </li>
-     <li> <img class="flag" src="img/nepal.png" alt="Nepal"> </li>
-     <li> <img class="flag" src="img/tibet.png" alt="Tibet"> </li>
-     <li> <img class="flag" src="img/bhutan.png" alt="Bhutan"> </li>
-     <li> <img class="flag" src="img/sri-lanka.png" alt="Sri-lanka"> </li>
-     <li> <img class="flag" src="img/maldives.png" alt="Maldives"> </li>
-     </ul>
-     <ul class="text">
-     <li class="india"> Индия </li>
-     <li class="nepal"> Непал </li>
-     <li class="tibet"> Тибет </li>
-     <li class="bhutan"> Бутан </li>
-     <li class="sri-lanka"> Шри-ланка </li>
-     <li class="maldives"> Мальдивы </li>
+     <li class="india"> <a href="#"> Индия </a> </li>
+     <li class="nepal"> <a href="#"> Непал </a> </li>
+     <li class="tibet"> <a href="#"> Тибет </a> </li>
+     <li class="bhutan"> <a href="#"> Бутан </a> </li>
+     <li class="sri-lanka"> <a href="#"> Шри-ланка </a> </li>
+     <li class="maldives"> <a href="#"> Мальдивы </a> </li>
      </ul>
      <img class="foto" src="img/foto.jpg" alt="foto">
 <div class="panel">
-    <ul class="upmenu">
-    <li class="gl"> Главная </li>
-    <li class="travel"> Путешествие <img src="img/Untitled1.png " alt="button">
-        <ul class="travel1">
-            <li> Путешествие 1 </li>
-            <li> Путешествие 2 </li>
-            <li> Путешествие 3 </li>
-            <li> Путешествие 4 </li>
-            <li> Путешествие 5 </li>
-        </ul>
-        </li>
-        <li class="servise"> Услуги <img src="img/Untitled1.png" alt="button">
-        <ul class="servise1">
-            <li> Услуги 1 </li>
-            <li> Услуги 2 </li>
-            <li> Услуги 3 </li>
-        </ul>
-            </li>
-     <li class="part"> Партнерам <img src="img/Untitled1.png" alt="button">
-        <ul class="part1">
-            <li> Партнерам 1 </li>
-            <li> Партнерам 2 </li>
-            <li> Партнерам 3 </li>
-        </ul>
-         </li>
-     <li> Отзывы клиентов</li>
-     <li> О нас </li>
-     <li> Контакты </li>    
-     </ul>
+   ul>
+    <li>Главная</li>
+    <li class="button">Путешествие <div class="upmenu"></div>
+      <ul>
+        <li> Путешествие 1 </li>
+        <li> Путешествие 2 </li>
+        <li> Путешествие 3 </li>
+        <li> Путешествие 4 </li>
+        <li> Путешествие 5 </li>
+      </ul>
+    </li>
+    <li class="button">Услуги <div class="upmenu"></div>
+      <ul>
+        <li> Услуги 1</li>
+        <li> Услуги 2</li>
+        <li> Услуги 3</li>
+      </ul>
+    </li>
+    <li class="button">Партнерам <div class="upmenu"></div>
+      <ul>
+        <li> Партнерам 1 </li>
+        <li> Партнерам 2 </li>
+        <li> Партнерам 3 </li>
+      </ul>
+    </li>
+    <li>Отзывы клиентов</li>
+    <li>О нас</li>
+    <li>Контакты</li>
+  </ul>
     </div>
-     
        </header>
        <div class="menu">
    <div class="info">
