--- a/homework4/index.html
+++ b/homework4/index.html
@@ -16,6 +16,7 @@
      <li class="tel2"> +9-0123-456-890</li>
      <li class="asia"> info@asia-holidays.com </li>
     </ul>
+    <ul class="text" >
      <li class="india"> <a href="#"> Индия </a> </li>
      <li class="nepal"> <a href="#"> Непал </a> </li>
      <li class="tibet"> <a href="#"> Тибет </a> </li>
