--- a/homework5/index.html
+++ b/homework5/index.html
@@ -37,7 +37,7 @@
             <input class="login" type="text" placeholder="Last Name">
         <input class="login" for="email" placeholder="Email Addres">
         <input class="login pas" type="password" placeholder="Password Confirm">
-        <input type="checkbox">
+        <input class="check" type="checkbox">
             <span> Send me Youbike updates and tips </span>  
         <input class="create" type="button" value="Create my Account">
             </div>   
