--- a/homework6/index.html
+++ b/homework6/index.html
@@ -176,8 +176,9 @@
              
             <p class="im"> <img src="img/hankook.jpg" alt="шины"> </p>
            
-                <p class="number strn393"> 393,00</p>
+                <p class="number strn393"> 393,00
                 <span class="grn"> грн. </span>
+                </p>
                  </figcaption>
                 </figure>
                 <figure class="wheel">
