--- a/homework78/index.html
+++ b/homework78/index.html
@@ -83,8 +83,8 @@
   <div class="avtor-block-all">
     <div class="avtor-container avtor-container__img">
       <div class="avtor-title titl1 ">PingbulLer <span class="title-color">starts here</span></div>
-      <div class="avtor-text">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar 
-        <span class="w768">urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”</span></div>
+      <div class="avtor-text">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae <span class="w320"> lectus eu libero pellentesque pulvinar 
+        <span class="w768">urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”</span></span></div>
         <ul class="avtor-slide-block-check">
           <li class="avtor-slide-check"></li>
           <li class="avtor-slide-check"></li>
