--- a/homework78/index.html
+++ b/homework78/index.html
@@ -96,13 +96,13 @@
       
     <div class="avtor-container avtor-container-upd">
       <div class="avtor-title w768-font">RECENT UPDATES</div>
-      <div class="avtor-first-line avtor-line__icon1">Nunc turpis neque, feugiat eget</div>
+      <div class="avtor-first-line avtor-line__icon1">Nunc turpis neque,<span class="w_320"> feugiat eget </span></div>
       <div class="avtor-text avtor-text__otstup">Posted by Admin on March 13 <span class="w768">2012</span><span class="w768">in Recent News</span></div>
 
-      <div class="avtor-first-line avtor-line__icon2">Nunc turpis neque, feugiat eget</div>
+      <div class="avtor-first-line avtor-line__icon2">Nunc turpis neque,<span class="w_320"> feugiat eget </span></div>
       <div class="avtor-text avtor-text__otstup">Posted by Admin on March 13 <span class="w768">2012</span> <span class="w768">in Category</span></div>
 
-      <div class="avtor-first-line avtor-line__icon3">Nunc turpis neque, feugiat eget</div>
+      <div class="avtor-first-line avtor-line__icon3">Nunc turpis neque, <span class="w_320"> feugiat eget </span></div>
       <div class="avtor-text avtor-text__otstup">Posted by Admin on March 13 <span class="w768">2012</span> <span class="w768">in Blog Updates</span></div>
       <div class="more avtor-more"><a href="">READ MORE HERE</a></div>
     </div>
