--- a/homeworkJs11-12/index.html
+++ b/homeworkJs11-12/index.html
@@ -23,7 +23,7 @@
         <li class="carousel-element"> <img src="img/blu.jpg" alt="rosa"/><p>сорт Майнзер</p></li>
         <li class="carousel-element"> <img src="img/utersen.jpg" alt="rosa"/ /><p>сорт Ютерсен</p></li>
         <li class="carousel-element"> <img src="img/bonika.jpg" alt="rosa" /><p>сорт Боника</p></li>
-        <li class="carousel-element"> <img src="img/chipedall.jpg" alt="rosa" /><p>Чиппендейл</p></li>
+        <li class="carousel-element"> <img src="img/chipedall.JPG" alt="rosa" /><p>Чиппендейл</p></li>
         <li class="carousel-element"> <img src="img/simpati.jpg" alt="rosa" /><p>сорт Симпати</p></li>
         <li class="carousel-element"> <img src="img/tomas.jpg" alt="rosa" /><p>сорт Томас</p></li>
         <li class="carousel-element"> <img src="img/shekspir.jpg" alt="rosa" /><p>сорт Шекспир</p></li>
@@ -36,7 +36,7 @@
         <li class="carousel-element"> <img src="img/blu.jpg" alt="rosa"/><p>сорт Майнзер</p></li>
         <li class="carousel-element"> <img src="img/utersen.jpg" alt="rosa"/ /><p>сорт Ютерсен</p></li>
         <li class="carousel-element"> <img src="img/bonika.jpg" alt="rosa" /><p>сорт Боника</p></li>
-        <li class="carousel-element"> <img src="img/chipedall.jpg" alt="rosa" /><p>Чиппендейл</p></li>
+        <li class="carousel-element"> <img src="img/chipedall.JPG" alt="rosa" /><p>Чиппендейл</p></li>
         <li class="carousel-element"> <img src="img/simpati.jpg" alt="rosa" /><p>сорт Симпати</p></li>
         <li class="carousel-element"> <img src="img/tomas.jpg" alt="rosa" /><p>сорт Томас</p></li>
         <li class="carousel-element"> <img src="img/shekspir.jpg" alt="rosa" /><p>сорт Шекспир</p></li>
